elastic_ip.tf
# Criando um IP elástico para o gateway

resource "aws_eip" "Nat-Gateway-EIP" {
  depends_on = [
    aws_route_table_association.RT-IG-Association
  ]
  vpc = true
}
